# bitcoinmusic-core

./: .gitignore  .gitmodules  BUILD_OSX.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README-docker.md  README.md
Docker/: config.ini  entrypoint.sh
doc/: api-notes.md  debug_node_plugin.md  plugin-custom-tags.md  plugin.md
example_plugins/hello_api/: CMakeLists.txt  hello_api_plugin.cpp
external_plugins/: CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/app/include/btcm/app/: api.hpp  api_access.hpp  api_context.hpp  application.hpp  database_api.hpp  impacted.hpp  plugin.hpp  state.hpp
libraries/chain/: CMakeLists.txt  asset_evaluator.cpp  asset_object.cpp  base_evaluator.cpp  base_objects.cpp  block_database.cpp  btcm_evaluator.cpp  btcm_objects.cpp  database.cpp  evaluator.cpp  fork_database.cpp  get_config.cpp  proposal_evaluator.cpp  proposal_object.cpp
libraries/chain/hardfork.d/: 0-1.hf  0-preamble.hf
libraries/chain/include/btcm/chain/: account_object.hpp  asset_object.hpp  balance_object.hpp  base_evaluator.hpp  base_objects.hpp  block_database.hpp  block_summary_object.hpp  compound.hpp  config.hpp  content_object.hpp  custom_evaluator.hpp  database.hpp  db_with.hpp  evaluator.hpp  exceptions.hpp  fork_database.hpp  genesis_state.hpp  get_config.hpp  global_property_object.hpp  (+9 more)
libraries/chain/protocol/: address.cpp  asset.cpp  asset_ops.cpp  authority.cpp  base_operations.cpp  block.cpp  btcm_operations.cpp  operations.cpp  proposal.cpp  pts_address.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cmake  genesis.json
libraries/egenesis/include/btcm/egenesis/: egenesis.hpp
libraries/fc/: CMakeLists.txt  README.md  sonar-project.properties
libraries/fc/include/fc/: array.hpp  fixed_string.hpp  static_variant.hpp  string.hpp  variant.hpp  variant_object.hpp
libraries/fc/src/: exception.cpp  filesystem.cpp  time.cpp
libraries/fc/src/crypto/: aes.cpp  base58.cpp  base64.cpp  elliptic_common.cpp  elliptic_impl_priv.cpp  elliptic_secp256k1.cpp  ripemd160.cpp  sha1.cpp  sha224.cpp  sha256.cpp  sha512.cpp
libraries/fc/src/io/: buffered_iostream.cpp  json.cpp
libraries/fc/src/log/: console_appender.cpp  file_appender.cpp  gelf_appender.cpp  log_message.cpp  logger.cpp
libraries/fc/src/network/: url.cpp
libraries/fc/src/rpc/: cli.cpp  http_api.cpp  json_connection.cpp  websocket_api.cpp
libraries/fc/src/thread/: context.hpp  thread_d.hpp
libraries/fc/tests/: CMakeLists.txt  api.cpp  bloom_test.cpp  hmac_test.cpp  run-parallel-tests.sh
libraries/fc/tests/io/: varint_tests.cpp
libraries/fc/tests/network/http/: websocket_test.cpp
libraries/fc/tests/thread/: thread_tests.cpp
libraries/manifest/: CMakeLists.txt  mf_plugins.cpp
libraries/manifest/inc/: mf_external_plugins.inc  mf_internal_plugins.inc
libraries/net/: node.cpp  peer_connection.cpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/account_history/include/btcm/account_history/: account_history_plugin.hpp
libraries/plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp
libraries/plugins/auth_util/include/btcm/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp
libraries/plugins/block_info/include/btcm/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/plugins/custom_tags/: CMakeLists.txt  custom_tags.cpp  custom_tags_api.cpp
libraries/plugins/custom_tags/include/btcm/custom_tags/: custom_tags.hpp  custom_tags_api.hpp
libraries/plugins/debug_node/: CMakeLists.txt  debug_node_api.cpp  debug_node_plugin.cpp
libraries/plugins/debug_node/include/btcm/plugins/debug_node/: debug_node_api.hpp  debug_node_plugin.hpp
libraries/plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp
libraries/plugins/delayed_node/include/btcm/delayed_node/: delayed_node_plugin.hpp
libraries/plugins/market_history/: CMakeLists.txt  market_history_api.cpp  market_history_plugin.cpp  normalized_ids.hxx
libraries/plugins/market_history/include/btcm/market_history/: market_history_api.hpp  market_history_plugin.hpp
libraries/plugins/private_message/: CMakeLists.txt  private_message_plugin.cpp
libraries/plugins/private_message/include/btcm/private_message/: private_message_plugin.hpp
libraries/plugins/raw_block/: CMakeLists.txt  raw_block_api.cpp  raw_block_plugin.cpp
libraries/plugins/raw_block/include/btcm/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/plugins/snapshot/: CMakeLists.txt  snapshot.cpp
libraries/plugins/snapshot/include/graphene/snapshot/: snapshot.hpp
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/plugins/witness/include/btcm/witness/: witness.hpp
libraries/utilities/: words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  wallet.cpp
programs/: CMakeLists.txt
programs/btcmd/: CMakeLists.txt  main.cpp
programs/build_helpers/: check_reflect.py
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  calc_inflation_constants.js  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  map_btcm_network.cpp  newplugin.py  sign_digest.cpp  sign_transaction.cpp
tests/: CMakeLists.txt
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/plugin_tests/: custom_tags.cpp  market_history.cpp
tests/tests/: api_tests.cpp  asset_tests.cpp  authority_tests.cpp  basic_tests.cpp  block_tests.cpp  btcm_tests.cpp  database_tests.cpp  main.cpp  operation_tests.cpp  operation_time_tests.cpp  reward_tests.cpp  serialization_tests.cpp
(+38 files in other folders)
